--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "eslint src && jest src",
+    "test": "eslint src && jest --silent src",
+    "jest": "jest --silent src",
     "lint": "eslint src",
     "dev": "nodemon src/index.ts",
     "build": "npx tsc",
@@ -21,12 +22,12 @@
   },
   "homepage": "https://github.com/ounai/mcmansion#readme",
   "dependencies": {
-    "cors": "^2.8.5",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^5.0.0-beta.1",
+    "jest-jasmine2": "^29.7.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
