--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,17 @@
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^5.0.0-beta.1",
-    "jest-jasmine2": "^29.7.0"
+    "jest-jasmine2": "^29.7.0",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.33.0",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.9",
+    "@types/validator": "^13.11.5",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "eslint": "^8.52.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
