--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite --port 51473",
+    "build": "tsc && vite build && rm -rf ../server/public && mv dist ../server/public && echo 'Build successful!'",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
