Use ruuvitag-database module

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,9 @@
   "exclude": [
     "**/*.spec.ts"
   ],
+  "ts-node": {
+    "files": true
+  },
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
