--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,11 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^5.0.0-beta.1",
+    "express": "^4.18.2",
     "jest-jasmine2": "^29.7.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "ruuvitag-database": "^1.0.0",
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5"
   },
