--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/ounai/mcmansion#readme",
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest-jasmine2": "^29.7.0",
@@ -33,6 +34,7 @@
     "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
