--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "bootstrap": "^5.3.2",
     "highcharts": "^11.2.0",
     "highcharts-react-official": "^3.2.1",
+    "i18next": "^23.7.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
